--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: modula-backend
     runtime: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python main.py"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
     envVars:
       - key: R2_ACCESS_KEY
         sync: false
