--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: modula-backend
     runtime: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
     envVars:
       - key: R2_ACCESS_KEY
         sync: false
@@ -14,4 +14,18 @@ services:
       - key: R2_ENDPOINT
         sync: false
       - key: R2_REGION
+        sync: false
+      - key: DB_HOST
+        sync: false
+      - key: DB_PORT
+        sync: false
+      - key: DB_NAME
+        sync: false
+      - key: DB_USER
+        sync: false
+      - key: DB_PASS
+        sync: false
+      - key: EMAIL_USER
+        sync: false
+      - key: EMAIL_PASS
         sync: false
