--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: modula-backend
     runtime: python
-    pythonVersion: "3.11"
-    buildCommand: "pip install -r requirements.txt"
+    pythonVersion: "3.13.7"
+    buildCommand: "pip install --upgrade pip && pip install --index-url https://pypi.org/simple -r requirements.txt"
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port 10000
     envVars:
       - key: R2_ACCESS_KEY
